--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,14 @@ SQLALCHEMY_DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POS
 SQLALCHEMY_TEST_DATABASE_URL="postgresql://${POSTGRES_TEST_USER}:${POSTGRES_TEST_PASSWORD}@${POSTGRES_TEST_HOST}:${POSTGRES_TEST_PORT}/${POSTGRES_TEST_DB}"
 
 SECRET_KEY=
+
+EMAILS_FROM_EMAIL=
+EMAILS_FROM_NAME=
+SMTP_HOST=
+SMTP_PORT=
+SMTP_TLS=
+SMTP_USER=
+SMTP_PASSWORD=
+EMAIL_RESET_TOKEN_EXPIRE_HOURS=
+
+BROKER_URL=redis://redis:6379/0
